force-app/main/default/objects/Lead__c/fields/ApplicatorName__c.field-meta.xml
<CustomField>
    <fullName>ApplicatorName__c</fullName>
    <label>Applicator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>