force-app/main/default/objects/Lead__c/fields/ApplicatorNumber__c.field-meta.xml
<CustomField>
    <fullName>ApplicatorNumber__c</fullName>
    <label>Applicator Contact Number</label>
    <type>Phone</type>
</CustomField>