force-app/main/default/objects/Lead__c/fields/ArchitectFirm__c.field-meta.xml
<CustomField>
    <fullName>ArchitectFirm__c</fullName>
    <label>Architect Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>