force-app/main/default/objects/Lead__c/fields/ArchitectNumber__c.field-meta.xml
<CustomField>
    <fullName>ArchitectNumber__c</fullName>
    <label>Architect Contact Number</label>
    <type>Phone</type>
</CustomField>