force-app/main/default/objects/Lead__c/fields/ConcernedPerson__c.field-meta.xml
<CustomField>
    <fullName>ConcernedPerson__c</fullName>
    <label>Concerned Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>