force-app/main/default/objects/Lead__c/fields/ContactNumber__c.field-meta.xml
<CustomField>
    <fullName>ContactNumber__c</fullName>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>