force-app/main/default/objects/Lead__c/fields/GraniteArea__c.field-meta.xml
<CustomField>
    <fullName>GraniteArea__c</fullName>
    <label>Granite Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>