force-app/main/default/objects/Lead__c/fields/IsAccountCreated__c.field-meta.xml
<CustomField>
    <fullName>IsAccountCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAccountCreated</label>
    <type>Checkbox</type>
</CustomField>