force-app/main/default/objects/Lead__c/fields/Marble_Area__c.field-meta.xml
<CustomField>
    <fullName>Marble_Area__c</fullName>
    <label>Marble Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>