force-app/main/default/objects/Lead__c/fields/NumberOfFloors__c.field-meta.xml
<CustomField>
    <fullName>NumberOfFloors__c</fullName>
    <label>Number Of Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>