force-app/main/default/objects/Lead__c/fields/Order_Value_New__c.field-meta.xml
<CustomField>
    <fullName>Order_Value_New__c</fullName>
    <label>Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>