force-app/main/default/objects/Lead__c/fields/Ordervalue__c.field-meta.xml
<CustomField>
    <fullName>Ordervalue__c</fullName>
    <label>Order value discarded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>