force-app/main/default/objects/Lead__c/fields/StoneArea__c.field-meta.xml
<CustomField>
    <fullName>StoneArea__c</fullName>
    <label>Stone Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>