force-app/main/default/objects/Lead__c/fields/tileArea__c.field-meta.xml
<CustomField>
    <fullName>tileArea__c</fullName>
    <label>Tile Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>