force-app/main/default/objects/Lead__c/validationRules/Order_Value_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Value_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;Qualified&apos;),ISBLANK( Order_Value_New__c))</errorConditionFormula>
    <errorDisplayField>Order_Value_New__c</errorDisplayField>
    <errorMessage>Please Fill Order Value</errorMessage>
</ValidationRule>